# vgmuse

./: .gitignore  .gitmodules  package-lock.json  package.json  readme.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/fonts/Inter/: inter.css
frontend/public/scripts/: vgmuse-player.js  vgmuse-player.wasm
frontend/src/: App.tsx  index.css  index.d.ts  main.tsx  types.ts  urls.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  requests.ts  vgm.ts
frontend/src/api/webassembly/: FileCache.ts  index.ts
frontend/src/components/: Alert.tsx  AuthHeader.tsx  FadeIn.tsx  Form.tsx  Head.tsx  LoadButton.tsx  MusicPlayer.tsx  Routes.tsx
frontend/src/components/buttons/: Button.tsx  ButtonCancel.tsx  ButtonPrimary.tsx  LoadButton.tsx
frontend/src/components/icons/: Spinner.tsx  SpinnerIcon.tsx  VolumeIcon.tsx
frontend/src/components/inputs/: FileDropZone.tsx  VGMDropZone.tsx
frontend/src/components/player/: MusicPlayer.tsx  PlayerControls.tsx
frontend/src/hooks/: useQuery.ts
frontend/src/lib/: Delegate.ts  cookie.ts  debounce.ts  errors.ts  formValidation.ts  paths.ts  types.ts
frontend/src/pages/: LandingPage.tsx
frontend/src/pages/app/: AppPages.tsx  ExplorePage.tsx  MuseFilesPage.tsx  UploadTrackPage.tsx
frontend/src/pages/auth/: AuthPages.tsx  LogInPage.tsx  SignUpPage.tsx  ValidationEmailSentPage.tsx  ValidationReceivedPage.tsx
frontend/src/services/: Service.ts  index.ts  vgm.ts
frontend/src/utility/: errors.ts  formValidation.ts
player/: CMakeLists.txt
player/lib/: CMakeLists.txt
player/player/: CMakeLists.txt
player/player/sandbox/: index.html  readme.md
player/player/src/: AudioDevice.cpp  AudioDevice.h  Driver.cpp  Driver.h  Error.cpp  Error.h  Gme.hpp  MetadataReader.cpp  MetadataReader.h  Player.cpp  Player.h  Wrapper.cpp  main.cpp
player/player/src/util/: sound.cpp  sound.h
server/: package-lock.json  package.json  tsconfig.json
server/src/: constants.ts  database.ts  env.ts  index.d.ts  main.ts  server.ts
server/src/api/: email.ts  s3.ts
server/src/config/: database.ts  email.ts  env.ts  index.ts  server.ts
server/src/controllers/api/: auth.ts  vgm.ts
server/src/lib/: errors.ts  hash.ts  types.ts  userToken.ts
server/src/middleware/: formParser.ts  injectUser.ts  loginRequired.ts
server/src/models/: User.ts  UserValidation.ts  Vgm.ts  index.ts  types.ts
server/src/routes/: master.ts
server/src/utilities/: env.ts  userToken.ts
(+11 files in other folders)
